tests/snapshots/cmd_generate__cmd_generate__context_proxy_direct_return-generated.snap
---
source: tests/cmd_generate.rs
expression: value
---
--- .github/workflows/generated_ci.yaml ---
# This file is generated by ghat. DO NOT EDIT.
name: CI
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ${{ matrix.runner }}
    strategy:
      matrix:
        runner:
        - ubuntu-latest
        - macos-latest
    steps:
    - id: step_0
      run: echo hello
--- .github/workflows/ghat_check.yaml ---
[315 bytes]
