tests/snapshots/cmd_generate__cmd_generate__job_and_step_features-generated.snap
---
source: tests/cmd_generate.rs
expression: value
---
--- .github/workflows/generated_context_proxies.yaml ---
# This file is generated by ghat. DO NOT EDIT.
name: Context Proxies
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo sha=${{ github.sha }} runner=${{ runner.os }} secret=${{ secrets.TOKEN }}
--- .github/workflows/generated_deploy_context.yaml ---
# This file is generated by ghat. DO NOT EDIT.
name: Deploy Context
run-name: Deploy to ${{ inputs.env }}
on:
  workflow_dispatch:
    inputs:
      env:
        type: choice
        required: true
        options:
        - staging
        - production
env:
  TOKEN: ${{ secrets.GITHUB_TOKEN }}
concurrency:
  group: deploy-${{ github.ref }}
  cancel-in-progress: true
jobs:
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo deploy
--- .github/workflows/generated_needs_and_outputs.yaml ---
# This file is generated by ghat. DO NOT EDIT.
name: Needs And Outputs
on:
  push:
    branches:
    - main
jobs:
  build_artifacts:
    name: Build Artifacts
    runs-on: ubuntu-latest
    outputs:
      artifact: build.tar.gz
      version: 1.0.0
    steps:
    - id: step_0
      run: cargo build --release
  deploy_to_production:
    name: Deploy To Production
    runs-on: ubuntu-latest
    needs:
    - build_artifacts
    if: ${{ needs.build_artifacts.result == 'success' }}
    env:
      VERSION: ${{ needs.build_artifacts.outputs.version }}
    timeout-minutes: 30
    steps:
    - id: step_0
      run: echo deploying ${{ needs.build_artifacts.outputs.artifact }}
--- .github/workflows/generated_run_options.yaml ---
# This file is generated by ghat. DO NOT EDIT.
name: Run Options
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo hello
    - id: step_1
      name: Run tests
      run: cargo test
      shell: bash
      working-directory: ./crates
      env:
        RUST_LOG: debug
      if: always()
      timeout-minutes: 30
      continue-on-error: true
--- .github/workflows/generated_step_outputs.yaml ---
# This file is generated by ghat. DO NOT EDIT.
name: Step Outputs
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
    - id: step_1
      run: echo checked out ${{ steps.step_0.outputs.ref }}
--- .github/workflows/ghat_check.yaml ---
[315 bytes]
