tests/snapshots/cmd_generate__cmd_generate__matrix_strategy-generated.snap
---
source: tests/cmd_generate.rs
expression: value
---
--- .github/workflows/generated_ci.yaml ---
name: CI
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    strategy:
      matrix:
        node:
        - '18'
        - '20'
        os:
        - ubuntu-latest
        - macos-latest
    steps:
    - id: step_0
      run: echo ${{ matrix.os }} ${{ matrix.node }}
--- .github/workflows/ghat_check.yaml ---
[268 bytes]
