tests/snapshots/cmd_generate__cmd_generate__multiple_workflows_one_file-generated.snap
---
source: tests/cmd_generate.rs
expression: value
---
--- .github/workflows/generated_build.yaml ---
# This file is generated by ghat. DO NOT EDIT.
name: Build
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo build
--- .github/workflows/generated_test.yaml ---
# This file is generated by ghat. DO NOT EDIT.
name: Test
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo test
--- .github/workflows/ghat_check.yaml ---
[315 bytes]
