tests/snapshots/cmd_generate__cmd_generate__pins_actions_to_lockfile_sha-generated.snap
---
source: tests/cmd_generate.rs
expression: value
---
--- .github/workflows/generated_ci.yaml ---
# This file is generated by ghat. DO NOT EDIT.
name: CI
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
    - id: step_1
      run: echo hello
--- .github/workflows/ghat_check.yaml ---
[315 bytes]
