tests/snapshots/cmd_generate__cmd_generate__simple_workflow-generated.snap
---
source: tests/cmd_generate.rs
expression: value
---
--- .github/workflows/generated_ci.yaml ---
# This file is generated by ghat. DO NOT EDIT.
name: CI
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo hello
--- .github/workflows/ghat_check.yaml ---
[315 bytes]
