tests/snapshots/cmd_generate__cmd_generate__step_output_through_workflow_call-generated.snap
---
source: tests/cmd_generate.rs
expression: value
---
--- .github/workflows/generated_build.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Build
on:
  workflow_call:
    inputs:
      save_cache:
        type: boolean
        required: false
        default: 'false'
    outputs:
      artifact_path:
        description: Path to the built artifact
        value: ${{ jobs.compile.outputs.artifact_path }}
jobs:
  compile:
    name: Compile
    runs-on: ubuntu-latest
    outputs:
      artifact_path: ${{ steps.step_0.outputs.path }}
    steps:
    - id: step_0
      run: cargo build --release --cache ${{ inputs.save_cache }}
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  run_build:
    name: Run Build
    uses: ./.github/workflows/generated_build.yaml
    with:
      save_cache: true
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    needs:
    - run_build
    steps:
    - id: step_0
      run: echo deploying ${{ needs.run_build.outputs.artifact_path }}
--- .github/workflows/ghat_check.yaml ---
[326 bytes]
